--- a/contact.html
+++ b/contact.html
@@ -60,18 +60,18 @@
             <h3>Send us an email</h3>
             <p>Looking to work with Loogart on a new project? Send us an email and we will get back to you as soon as possible!</p>
 
-            <form action="https://formspree.io/chris@loogart.com" method="POST">
+            <form id="contactform" action="https://formspree.io/chris@loogart.com" method="POST">
                 <div class="form-group">
                     <label for="inputSubject">Subject</label>
-                    <input type="hidden" name="_subject" value="New submission!" class="form-control" id="subject" placeholder="Email">
+                    <input type="text" name="_subject" value="" class="form-control" id="subject" placeholder="How we can help you...">
                 </div>
                 <div class="form-group">
                     <label for="inputName">Name</label>
-                    <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Your first and last names">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail">Email address</label>
-                    <input type="email" name="_replyto" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <input type="email" name="_replyto" class="form-control" id="exampleInputEmail1" placeholder="Your email">
                 </div>
                 <input type="text" name="_gotcha" style="display:none" />
                 <div class="form-group">
