--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,22 @@
 
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input class="form-control" type="text" name="first_name" placeholder="First Name and last names" >
+                    <input class="form-control" type="text" name="first_name" placeholder="First Name and last names">
                 </div>
-                               
+                <div class="form-group">
+                    <label for="name">Subject</label>
+                    <div class="select-69 has-feedback">
+                        <select name="subject" class="form-control selectpicker">
+                            <option value=" ">How can we help you?</option>
+                            <option>Commission</option>
+                            <option>Question</option>
+                            <option>Loog request</option>
+                            <option>Website bug</option>
+                            <option>Other</option>
+                        </select>
+                         <span class="glyphicon glyphicon-menu-down form-control-feedback" aria-hidden="true"></span>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" class="form-control" type="email" name="email" placeholder="you@email.com">
