--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <!-- Clients section -->
     <section class="clients">
         <div class="container">
-            <h3>Since then I have worked with...</h3>
+            <h3>I have worked with...</h3>
             <ul class="col-sm-6 list-unstyled">
                 <li>Starbucks</li>
                 <li>car2go</li>
