--- a/index.html
+++ b/index.html
@@ -115,188 +115,188 @@
                 </div>
                 <div class="col-sm-6">
                     <a href="projects/starbucks-cityscape-illustration.html">
-                        <span class="outer">
+                        <div class="outer">
                             <div class="inner portfolio-starbucks"></div>
                             <div class="portfolio-text top no-gradient text-dark">
-                                <span class="logo pull-left starbucks-logo"></span>
-                        <span class="logo-text pull-right">
+                                <div class="logo pull-left starbucks-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5 class="text-green-starbucks">Starbucks</h5>
                                     <p>Illustration created originally for my best friend’s living room. He of course has it hanging in his living room.</p>
-                                </span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                </span>
-                </a>
             </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#!">
-                <span class="outer">
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-ets"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
-                                <span class="logo pull-left ets-logo"></span>
-                <span class="logo-text pull-right">
+                                <div class="logo pull-left ets-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5 class="text-red-ets">ÉTS</h5>
                                     <p>Illustration designed for the Ecole de Technologie Superieure in Montreal.</p>
-                                </span>
-        </div>
-        </span>
-        </a>
-    </div>
-    <div class="col-sm-6">
-        <a href="#!">
-            <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-car2go"></div>
                             <div class="portfolio-text top no-gradient text-light">
-                                <span class="logo-text pull-left">
+                                <div class="logo-text pull-left">
                                     <h5>car2go</h5>
                                     <p>Illustration created for car2go Montreal produced by Station 16.</p>
-                                </span>
-    </div>
-    </span>
-    </a>
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#!">
-                <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-swiffer"></div>
                             <div class="portfolio-text bottom text-light">
-                                <span class="logo pull-left swiffer-logo"></span>
-                <span class="logo-text pull-right">
+                                <div class="logo pull-left swiffer-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5>Swiffer</h5>
                                     <p>Montreal Moving Day social media creative.</p>
-                                </span>
-        </div>
-        </span>
-        </a>
-    </div>
-    <div class="col-sm-6">
-        <a href="#!">
-            <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-upa"></div>
                             <div class="portfolio-text top no-gradient text-light">
-                                <span class="logo pull-left upa-logo"></span>
-            <span class="logo-text pull-right">
+                                <div class="logo pull-left upa-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5>L'Union des producteurs agricoles</h5>
                                     <p>Illustration made for the UPA which was made into a TV commercial.</p>
-                                </span>
-    </div>
-    </span>
-    </a>
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#!">
-                <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-travel-smart"></div>
                             <div class="portfolio-text bottom text-light">
                                 <div class="travel-smart-logo"></div>
-                                <span class="logo pull-left canada-logo"></span>
-                <span class="pull-left">
+                                <div class="logo pull-left canada-logo"></div>
+                                <div class="pull-left">
                                     <h5>Travel Smart</h5>
                                     <p>Visual and user experience design for Global Affairs Canada’s Travel Smart app.</p>
-                                </span>
-        </div>
-        </span>
-        </a>
-    </div>
-    <div class="col-sm-6">
-        <a href="#!">
-            <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-suite88"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
-                                <span class="logo pull-right suite88-logo"></span>
-            <span class="logo-text pull-left">
+                                <div class="logo pull-right suite88-logo"></div>
+                                <div class="logo-text pull-left">
                                     <h5>Suite 88</h5>
                                     <p>Illustration designed for Suite 88 limited edition chocolate packaging.</p>
-                                </span>
-    </div>
-    </span>
-    </a>
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="#!">
-                <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-otis"></div>
                             <div class="portfolio-text bottom no-gradient text-dark">
-                                <span class="logo pull-left otis-logo"></span>
-                <span class="logo-text pull-right">
+                                <div class="logo pull-left otis-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5 class="text-blue-otis">Otis Elevator</h5>
                                     <p>Animated GIF for an Otis Canada Holiday Greeting.</p>
-                                </span>
-        </div>
-        </span>
-        </a>
-    </div>
-    <div class="col-sm-6">
-        <a href="#!">
-            <span class="outer">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="#!">
+                        <div class="outer">
                             <div class="inner portfolio-innovation-space"></div>
                             <div class="portfolio-text top text-light">
-                                <span class="logo pull-left canada-logo"></span>
-            <span class="logo-text pull-right">
+                                <div class="logo pull-left canada-logo"></div>
+                                <div class="logo-text pull-right">
                                     <h5>Innovation Space</h5>
                                     <p>Illustrations created for the new Innovation Room walls at Global Affairs Canada.</p>
-                                </span>
-    </div>
-    </span>
-    </a>
-    </div>
-    </div>
-    </section>
-
-    <!-- Brand identity section -->
-
-    <section class="portfolio">
-        <div class="row">
-            <div class="container">
-                <h3>Brand identity projects</h3>
-                <h4>A selection of brand identities designed by Loogart for various clients in different industries. </h4>
-                <div class="scroll">
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
-                    <a href="#!"><img class="carousel-brands" src=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <h5><a href="#!">View all brand projects</a></h5>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Web design section -->
+        <!-- Brand identity section -->
 
-    <section class="portfolio">
-        <div class="row">
-            <div class="container">
-                <h3>Web design projects</h3>
-                <h4>A selection of websites made with love by Loogart for several clients in different industries.</h4>
-                <div class="scroll">
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
-                    <a href="#!"><img class="carousel-web-design" src=""></a>
+        <section class="portfolio">
+            <div class="row">
+                <div class="container">
+                    <h3>Brand identity projects</h3>
+                    <h4>A selection of brand identities designed by Loogart for various clients in different industries. </h4>
+                    <div class="scroll">
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                        <a href="#!"><img class="carousel-brands" src=""></a>
+                    </div>
+                    <h5><a href="#!">View all brand projects</a></h5>
                 </div>
-                <h5><a href="#!">View all web projects</a></h5>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <!-- Web design section -->
+
+        <section class="portfolio">
+            <div class="row">
+                <div class="container">
+                    <h3>Web design projects</h3>
+                    <h4>A selection of websites made with love by Loogart for several clients in different industries.</h4>
+                    <div class="scroll">
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                        <a href="#!"><img class="carousel-web-design" src=""></a>
+                    </div>
+                    <h5><a href="#!">View all web projects</a></h5>
+                </div>
+            </div>
+        </section>
 
     </div>
     <!-- /container -->
